Fix hover on mobile

--- a/src/AlbumGrid.css
+++ b/src/AlbumGrid.css
@@ -15,7 +15,9 @@
   cursor: pointer;
 }
 
-.album img:hover {
-  scale: 1.3;
-  z-index: 1;
+@media (pointer: fine) {
+  .album img:hover {
+    scale: 1.3;
+    z-index: 1;
+  }
 }
